--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: habittrackertute
+name: habittracker
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -20,7 +20,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.18.0 <3.0.0'
+  sdk: '>=2.17.0 <3.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,22 +31,25 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_heatmap_calendar: ^1.0.5
+  flutter_slidable: ^3.1.0
+  hive_flutter: ^1.1.0
+  isar: ^2.5.0
+  isar_flutter_libs: ^2.5.0
+  path_provider: ^2.0.15
+  provider: ^6.1.2
+  get: ^4.6.6
+  intl: ^0.19.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  flutter_slidable: ^1.2.0
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
-  flutter_heatmap_calendar: ^1.0.5
-
+  
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  hive_generator: ^1.1.3
-  build_runner: ^2.1.11
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -54,6 +57,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  isar_generator: ^2.5.0
+  build_runner: ^2.2.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
