--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "habittrackertute",
-    "short_name": "habittrackertute",
+    "name": "habittracker",
+    "short_name": "habittracker",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
