--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "habittrackertute" "\0"
+            VALUE "FileDescription", "habittracker" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "habittrackertute" "\0"
+            VALUE "InternalName", "habittracker" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2022 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "habittrackertute.exe" "\0"
-            VALUE "ProductName", "habittrackertute" "\0"
+            VALUE "OriginalFilename", "habittracker.exe" "\0"
+            VALUE "ProductName", "habittracker" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
